--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dev_dependencies:
   draggable_home: ^1.0.5
   get: ^4.6.6
   flutter_svg: ^2.0.10+1
+  google_sign_in: ^6.2.1
+  change_app_package_name: ^1.4.0
+  firebase_core: ^3.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
